# Xertica-Education

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README 2.md  SETUP.md
rules copy/: grilling.md  (+11 more)
xertica-education/apps/api/: .dockerignore  .env.example  Dockerfile  README.md  main.py  package.json  pyproject.toml  remotion  requirements.txt  run_generation.py  run_tests.py  test_adapters.py  verify_boot.py
xertica-education/apps/api/adapters/audio/: base.py  google_tts.py  pixabay_music.py
xertica-education/apps/api/adapters/embeddings/: __init__.py  base.py  mock.py  openai_embedder.py
xertica-education/apps/api/adapters/linker/: __init__.py  base.py  mock.py  openrouter_linker.py
xertica-education/apps/api/adapters/llm/: base.py  openrouter.py
xertica-education/apps/api/adapters/parser/: base.py  simple.py
xertica-education/apps/api/adapters/renderer/: base.py  google_imagen.py  google_veo.py  playwright_capture.py
xertica-education/apps/api/adapters/research/: __init__.py  google_search_grounding.py  tavily 2.py
xertica-education/apps/api/adapters/storage/: __init__.py  base.py  memory.py  supabase.py  supabase_storage.py
xertica-education/apps/api/config/: dependencies.py  settings.py
xertica-education/apps/api/models/: common.py
xertica-education/apps/api/models/domain/: approved_research_source.py  asset.py  asset_version.py  component.py  document.py  kb.py  learning_path.py  module.py  source.py  source_module_link.py
xertica-education/apps/api/models/dto/: render_plan.py  requests.py  responses.py
xertica-education/apps/api/prompts/: __init__ 2.py  lab.py  lesson 3.py  linker 2.py  quiz 3.py  research 2.py  route_structurer 3.py  video 2.py
xertica-education/apps/api/repositories/approved_research_sources/: __init__.py  interface.py  memory.py  repository.py
xertica-education/apps/api/repositories/documents/: __init__.py  interface.py  memory.py  repository.py
xertica-education/apps/api/routers/: documents.py  google_drive.py  jobs.py  kb.py  learning_paths.py  video.py
xertica-education/apps/api/tests/: conftest 2.py  test_approved_research_sources.py  test_chunking.py  test_documents.py  test_embeddings.py  test_infographic.py  test_kb_endpoint.py  test_kb_ingestion.py  test_kb_service.py  test_lab.py  test_lesson 2.py  test_lesson.py  test_linker.py  test_parser.py  test_quiz.py  test_route_structurer.py  test_sourcing_repository.py  test_spine_materializer 2.py  test_tavily_adapter 4.py  test_upload_endpoint.py  test_video.py
(+376 files in other folders)
