[project]
name = "xertica-education-api"
version = "0.1.0"
description = "FastAPI backend for Xertica Education MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "supabase>=2.3.0",
    "httpx>=0.27.0",
    "google-cloud-texttospeech>=2.37.0",
    "playwright>=1.61.0",
    "google-genai>=1.0.0",
    "Pillow>=10.0.0",
]

# La API es una aplicación de layout plano (main.py, config/, models/…), no una
# librería empaquetable. uv gestiona solo el entorno/dependencias, sin construir
# un wheel del proyecto (evita el error de hatchling "unable to determine files").
[tool.uv]
package = false
